crates/gql_codegen_core/tests/generators/documents/snapshots/generators__documents__documents_plain.snap
---
source: crates/gql_codegen_core/tests/generators/documents/mod.rs
expression: output
---
export const CreateUserDocument = `
  mutation CreateUser($input: CreateUserInput!) {
    createUser(input: $input) {
      id
      name
    }
  }
`;

export const GetUserDocument = `
  query GetUser($id: ID!) {
    user(id: $id) {
      id
      name
      email
    }
  }
`;

export const GetUsersDocument = `
  query GetUsers {
    users {
      id
      name
    }
  }
`;
