crates/gql_codegen_core/tests/generators/documents/snapshots/generators__documents__documents_with_fragments.snap
---
source: crates/gql_codegen_core/tests/generators/documents/mod.rs
expression: output
---
export const GetUserWithFragmentsDocument = `
  query GetUserWithFragments($id: ID!) {
    user(id: $id) {
      ...UserFields
      posts {
        ...PostFields
      }
    }
  }
`;

export const PostFieldsDocument = `
  fragment PostFields on Post {
    id
    title
    body
  }
`;

export const UserFieldsDocument = `
  fragment UserFields on User {
    id
    name
    email
  }
`;
