crates/gql_codegen_core/tests/generators/documents/snapshots/generators__documents__documents_with_gql_tag.snap
---
source: crates/gql_codegen_core/tests/generators/documents/mod.rs
expression: output
---
import { gql } from 'graphql-tag';

export const GetUserDocument = gql`
  query GetUser($id: ID!) {
    user(id: $id) {
      id
      name
      email
    }
  }
`;

export const GetUsersDocument = gql`
  query GetUsers {
    users {
      id
      name
    }
  }
`;

export const CreateUserDocument = gql`
  mutation CreateUser($input: CreateUserInput!) {
    createUser(input: $input) {
      id
      name
    }
  }
`;
